delete pasword from getCurrent response, add users docs to swagger
